correction after teacher remarks -task2